# ants_simulator

./: Cargo.toml  README.md  info.json
src/: ant.rs  configuration.rs  env.rs  main.rs  utils.rs
