[package]
name = "ants_simulator"
version = "0.1.0"
authors = ["RoeyFuchs <fuchsroey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
multi_dim_point = "0.3.0"
serde_json = "1.0"
ggez = { git = "https://github.com/dchiquito/ggez", branch = "devel" }
